--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,6 +36,27 @@
   z-index: -1;
 }
 
+.testimonialImg {
+  background-image: url("/pattern.jpg");
+  height: auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  /* height: 100vh; */
+  z-index: 1;
+}
+.testimonialImg::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.9;
+  z-index: -1;
+}
+
 
 .aboutSection {
   background-image: url("/hero.jpg");
